2009-12-30  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-image-type): Don't generate
	redundant temporary files. The image format is specified by
	the command line instead of a file extension.

2009-12-30  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-image-type): Don't set a third
	argument of `make-temp-file' to work on Emacs21.

2009-12-29  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-get-response-header): Add an
	optional third argument for `search-forward-regexp'.

2009-12-29  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode 0.9.0 release
	
	* twittering-mode.el (twittering-start-http-session): check if
	curl can use https or not.
	(twittering-get-response-body): bug fix: goto the beginning of
	buffer before search-forward. 'xml-parse-region' doesn't return
	when parsing unbalanced XML.
	(twittering-start-http-session): Use call-process instead of
	shell-command-to-string. If 'curl-program' contains space
	characters, shell-command fails.

2009-12-29  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-get-response-body): Return nil
	explicitly when a broken XML data passed into `xml-parse-region'.
	(twittering-http-get-default-sentinel): Adjust callers.
	(twittering-http-post-default-sentinel): Likewise.

	* twittering-mode.el (twittering-http-post-default-sentinel): Add 
	`debug-printf' same as `twittering-http-get-default-sentinel'.

	* twittering-mode.el (twittering-http-post-default-sentinel):
	Change a regexp pattern for HTTP response status line; same as
	`twittering-http-get-default-sentinel'.
	(twittering-http-get-list-index-sentinel): Likewise.

2009-12-29  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el: load mule-ucs if needed (emacs21)
	(twittering-start-http-ssl-session): add 'Expect: ' header field
	for avoiding '417 Expectation Failed' HTTP response error. See